# tars

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: publish.yml  release.yml
migrations/: 20230917041936_init.sql
src/: connection.rs  gql.rs  main.rs  packets.rs  structs.rs
