[package]
name = "ta-relay-rs"
version = "0.1.0"
edition = "2021"
authors = ["sargon64 <niko@mail.velvet.moe>", "skkeye <[email protected]>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-cors = "0.6.4"
# actix-web = "4.3.1"
# actix-web-actors = "4.2.0"
anyhow = "1.0.74"
async-stream = "0.3.5"
async_once = "0.2.6"
carboxyl = "0.2.2"
chrono = "0.4.26"
crossbeam-channel = "0.5.8"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
juniper = "0.15.11"
# juniper_actix = { version = "0.4.0", features = ["subscriptions"] }
juniper_graphql_ws = "0.3.0"
juniper_subscriptions = "0.16.0"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
lazy_static = "1.4.0"
log = "0.4.20"
prost = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["uuid", "macros", "chrono", "runtime-tokio-rustls", "postgres"] }
text-to-ascii-art = "0.1.9"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = [
    "rustls-tls-native-roots"
] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { version = "0.3.5", features = ["tokio-rustls"] }
parking_lot = {version = "0.12.1", features = ["deadlock_detection"]}

[build-dependencies]
prost-build = "0.12.1"
